@@ -34,8 +34,10 @@ S3method("ascii", "summary.aovlist")
 S3method("ascii", "summary.glm")
 S3method("ascii", "summary.lm")
 S3method("ascii", "summary.prcomp")
+S3method("ascii", "summary.survfit")
 S3method("ascii", "summary.table")
 S3method("ascii", "survdiff")
+S3method("ascii", "survfit")
 S3method("ascii", "table")
 S3method("ascii", "ts")
 S3method("ascii", "zoo")
