@@ -1,13 +1,14 @@
 2009/11/xx
 ~~~~~~~~~~
 
-* fix bug in ascii.CrossTable when no test result
+* method for +survfit+ and +summary.survfit+ objects
+* fix bug in +ascii.CrossTable+ when no test result
 * fix extra spaces in org output when style = "s" or "m"
 
 2009/11/25
 ~~~~~~~~~~
 
-* fix several bugs in ascii.freqtable and ascii.meanscomp
+* fix several bugs in +ascii.freqtable+ and +ascii.meanscomp+
 * fix several bugs in asciidoc table header
 
 2009/11/24
